[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/SaveSlotTemplate.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="SaveSlotTemplate" type="HBoxContainer"]
margin_right = 502.0
margin_bottom = 66.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 72.0
margin_bottom = 84.0
rect_min_size = Vector2( 72, 0 )
custom_styles/panel = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -42.0
margin_right = 32.0
margin_bottom = 42.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 76.0
margin_right = 476.0
margin_bottom = 84.0

[node name="SaveName" type="TextEdit" parent="VBoxContainer"]
margin_right = 400.0
margin_bottom = 24.0
rect_min_size = Vector2( 400, 24 )
readonly = true

[node name="Date" type="Label" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 400.0
margin_bottom = 42.0
text = "Saved on.: yyyy/mm/dd"

[node name="Status" type="Label" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 400.0
margin_bottom = 60.0
text = "Work"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 400.0
margin_bottom = 84.0

[node name="Overwrite" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 75.0
margin_bottom = 20.0
text = "Overwrite"

[node name="Load" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 79.0
margin_right = 121.0
margin_bottom = 20.0
text = "Load"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Overwrite" to="." method="_on_Overwrite_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Load" to="." method="_on_Load_pressed"]
